work done on OCT/11/2023 ahead of demo on OCT/12/2023

--- a/test.html
+++ b/test.html
@@ -2,9 +2,63 @@
 <html lang="en-US">
 <head>
     <link rel="stylesheet" href="test-style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="action.js"></script>
+    <script src="menutoggle.js"></script>
 </head>
 
 <body>
+
+    <div id="dragcategories">
+        <div id="dragcategoriesheader">
+            <a onclick="categoriesToggle()" title="categories"><h1>categories</h1></a>
+            <div id="categories" class="linktree_content">
+                <div class="linktree_nav">
+                    <div><img id="slideUp" type="button" class="arrow up" src="images/arrow up.png" alt="arrow up image"></div>
+                    <div><img id="slideDown" type="button" class="arrow down" src="images/arrow down.png" alt="arrow down image"></div>
+                </div>
+                <div id="linktree_list">
+                    <a href="#"><p>item 1</p></a>
+                    <a href="#"><p>item 2</p></a>
+                    <a href="#"><p>item 3</p></a>
+                    <a href="#"><p>item 4</p></a>
+                    <a href="#"><p>item 5</p></a>
+                    <a href="#"><p>item 6</p></a>
+                    <a href="#"><p>item 7</p></a>
+                    <a href="#"><p>item 8</p></a>
+                    <a href="#"><p>item 9</p></a>
+                    <a href="#"><p>item 10</p></a>
+                    <a href="#"><p>item 11</p></a>
+                    <a href="#"><p>item 12</p></a>
+                </div>
+            </div>
+        
+        </div>
+    </div>
+
+<div id="dragshop">
+    <div id="dragshopheader">
+        <h1>shop</h1>
+    </div>
+</div>
+
+<div id="draglistenup">
+    <div id="draglistenupheader">
+        <h1>listen up</h1>
+    </div>
+</div>
+
+<div id="dragreferences">
+    <div id="dragreferencesheader">
+        <h1>references</h1>
+    </div>
+</div>
+
+<div id="dragnewsstand">
+    <div id="dragnewsstandheader">
+        <h1>newsstand</h1>
+    </div>
+</div>
 
 </body>
 
