--- a/index.html
+++ b/index.html
@@ -3,14 +3,96 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script type = "text/javascript" src="menutoggle.js"></script>
-    <script></script>
+    <script type = "text/javascript" src="action.js"></script>
 </head>
-<body class="cover">
+<body>
+    
+<!-- this is a draggable element. exist outside the "cover" class -->
+    <div id="dragcategories">
+        <div id="dragcategoriesheader">
+            <a onclick="categoriesToggle()" title="categories"><h3>categories</h3></a>
+            <div id="categories" class="linktree_content">
+                <div class="linktree_nav">
+                    <div><img id="slideUp" type="button" class="arrow up" src="images/arrow up.png" alt="arrow up image"></div>
+                    <div><img id="slideDown" type="button" class="arrow down" src="images/arrow down.png" alt="arrow down image"></div>
+                </div>
+                <div id="linktree_list">
+                    <a href="#"><p>item 1</p></a>
+                    <a href="#"><p>item 2</p></a>
+                    <a href="#"><p>item 3</p></a>
+                    <a href="#"><p>item 4</p></a>
+                    <a href="#"><p>item 5</p></a>
+                    <a href="#"><p>item 6</p></a>
+                    <a href="#"><p>item 7</p></a>
+                    <a href="#"><p>item 8</p></a>
+                    <a href="#"><p>item 9</p></a>
+                    <a href="#"><p>item 10</p></a>
+                    <a href="#"><p>item 11</p></a>
+                    <a href="#"><p>item 12</p></a>
+                </div>
+            </div>
+        
+        </div>
+    </div>
 
-<div></div>
+<!-- this is a draggable element. exist outside the "cover" class -->
 
-<h4></h4>
+<div id="dragarchives">
+    <div id="dragarchivesheader">
+    <div id="archives">
+        <div class="archives_outline">
+        <div class="archives_list scroll scroll-color-colors">
+           <a href="#"><p>october 2023</p></a>
+           <a href="#"><p>september 2023</p></a>
+           <a href="#"><p>august 2023</p></a>
+           <a href="#"><p>july 2023</p></a>
+           <a href="#"><p>june 2023</p></a>
+           <a href="#"><p>may 2023</p></a>
+           <a href="#"><p>april 2023</p></a>
+           <a href="#"><p>march 2023</p></a>
+           <a href="#"><p>february 2023</p></a>
+           <a href="#"><p>january 2022</p></a>
+           <a href="#"><p>december 2022</p></a>
+           <a href="#"><p>november 2022</p></a>
+           <a href="#"><p>october 2022</p></a>
+           <a href="#"><p>september 2022</p></a>
+           <a href="#"><p>august 2022</p></a>
+           <a href="#"><p>july 2022</p></a>
+           <a href="#"><p>june 2022</p></a>
+           <a href="#"><p>may 2022</p></a>
+           <a href="#"><p>april 2022</p></a>
+           <a href="#"><p>march 2022</p></a>
+           <a href="#"><p>february 2022</p></a>
+           <a href="#"><p>january 2022</p></a>
+           <a href="#"><p>december 2021</p></a>
+           <a href="#"><p>november 2021</p></a>
+           <a href="#"><p>october 2021</p></a>
+           <a href="#"><p>september 2021</p></a>
+           <a href="#"><p>august 2021</p></a>
+           <a href="#"><p>july 2021</p></a>
+           <a href="#"><p>june 2021</p></a>
+           <a href="#"><p>may 2021</p></a>
+           <a href="#"><p>april 2021</p></a>
+           <a href="#"><p>march 2021</p></a>
+           <a href="#"><p>february 2021</p></a>
+           <a href="#"><p>january 2021</p></a>
+        </div>
+        <div class="archives_container scroll scroll-color-colors">
+            <div class="post_title"><a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a></div>
+            <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
+            <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+            <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
+            <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+        </div>
+        </div> 
+    </div>
+    </div>
+    </div>
 
+
+    <!-- still need to resolve the glitch with post_outline class -->
+<div id="dragpost">
+<div id="dragpostheader">
 <div id="post" class="post_outline">
     <div class="post_container scroll scroll-color-colors">
         <div class="post_title"><a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a></div>
@@ -20,79 +102,17 @@
         <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
     </div>
 </div>
-
-<div id="archives" >
-    <div class="archives_outline">
-    <div class="archives_list scroll scroll-color-colors">
-       <a href="#"><p>october 2023</p></a>
-       <a href="#"><p>september 2023</p></a>
-       <a href="#"><p>august 2023</p></a>
-       <a href="#"><p>july 2023</p></a>
-       <a href="#"><p>june 2023</p></a>
-       <a href="#"><p>may 2023</p></a>
-       <a href="#"><p>april 2023</p></a>
-       <a href="#"><p>march 2023</p></a>
-       <a href="#"><p>february 2023</p></a>
-       <a href="#"><p>january 2022</p></a>
-       <a href="#"><p>december 2022</p></a>
-       <a href="#"><p>november 2022</p></a>
-       <a href="#"><p>october 2022</p></a>
-       <a href="#"><p>september 2022</p></a>
-       <a href="#"><p>august 2022</p></a>
-       <a href="#"><p>july 2022</p></a>
-       <a href="#"><p>june 2022</p></a>
-       <a href="#"><p>may 2022</p></a>
-       <a href="#"><p>april 2022</p></a>
-       <a href="#"><p>march 2022</p></a>
-       <a href="#"><p>february 2022</p></a>
-       <a href="#"><p>january 2022</p></a>
-       <a href="#"><p>december 2021</p></a>
-       <a href="#"><p>november 2021</p></a>
-       <a href="#"><p>october 2021</p></a>
-       <a href="#"><p>september 2021</p></a>
-       <a href="#"><p>august 2021</p></a>
-       <a href="#"><p>july 2021</p></a>
-       <a href="#"><p>june 2021</p></a>
-       <a href="#"><p>may 2021</p></a>
-       <a href="#"><p>april 2021</p></a>
-       <a href="#"><p>march 2021</p></a>
-       <a href="#"><p>february 2021</p></a>
-       <a href="#"><p>january 2021</p></a>
-    </div>
-    <div class="archives_container scroll scroll-color-colors">
-        <div class="post_title"><a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a></div>
-        <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-        <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-        <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-        <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-    </div>
-    </div>
+</div>
 </div>
 
-<div class="linktree_outline">
-    <a onclick="categoriesToggle()" title="categories"><h3>categories</h3></a>
-    <div id="categories" class="linktree_content">
-        <div class="linktree_nav">
-            <div><img id="slideUp" type="button" class="arrow up" src="images/arrow up.png" alt="arrow up image"></div>
-            <div><img id="slideDown" type="button" class="arrow down" src="images/arrow down.png" alt="arrow down image"></div>
-        </div>
-        <div id="linktree_container">
-            <a href="#"><p>item 1</p></a>
-            <a href="#"><p>item 2</p></a>
-            <a href="#"><p>item 3</p></a>
-            <a href="#"><p>item 4</p></a>
-            <a href="#"><p>item 5</p></a>
-            <a href="#"><p>item 6</p></a>
-            <a href="#"><p>item 7</p></a>
-            <a href="#"><p>item 8</p></a>
-            <a href="#"><p>item 9</p></a>
-            <a href="#"><p>item 10</p></a>
-            <a href="#"><p>item 11</p></a>
-            <a href="#"><p>item 12</p></a>
-        </div>
-    </div>
 
-</div>
+
+
+<div class="cover">
+
+<div></div>
+
+<h4></h4>
 
 <div class="menu">
 <ul class="nav">
@@ -111,15 +131,17 @@
 </ul>
 </div>
 
+</div>
+
 <script>
     const buttonRight = document.getElementById('slideDown');
     const buttonLeft = document.getElementById('slideUp');
 
     buttonRight.onclick = function () {
-      document.getElementById('linktree_container').scrollBy(0, 31);
+      document.getElementById('linktree_list').scrollBy(0, 31);
     };
     buttonLeft.onclick = function () {
-      document.getElementById('linktree_container').scrollBy(0, -31);
+      document.getElementById('linktree_list').scrollBy(0, -31);
     };
 </script>
 
