--- a/index.html
+++ b/index.html
@@ -8,33 +8,6 @@
 </head>
 
 <body>
-    
-<!-- this is a draggable element. exist outside the "cover" class -->
-<div id="dragcategories">
-<div id="dragcategoriesheader">
-    <a onclick="categoriesToggle()" title="categories"><h3>categories</h3></a>
-    <div id="categories" class="linktree_content">
-        <div class="linktree_nav">
-            <div><img id="slideUpcategories" type="button" class="arrow up" src="images/arrow up.png" alt="arrow up image"></div>
-            <div><img id="slideDowncategories" type="button" class="arrow down" src="images/arrow down.png" alt="arrow down image"></div>
-        </div>
-        <div id="linktreelistcategories">
-            <a href="#"><p>item 1</p></a>
-            <a href="#"><p>item 2</p></a>
-            <a href="#"><p>item 3</p></a>
-            <a href="#"><p>item 4</p></a>
-            <a href="#"><p>item 5</p></a>
-            <a href="#"><p>item 6</p></a>
-            <a href="#"><p>item 7</p></a>
-            <a href="#"><p>item 8</p></a>
-            <a href="#"><p>item 9</p></a>
-            <a href="#"><p>item 10</p></a>
-            <a href="#"><p>item 11</p></a>
-            <a href="#"><p>item 12</p></a>
-        </div>
-    </div>
-</div>
-</div>
 
 <!-- this is a draggable element. exist outside the "cover" class -->
 <div id="dragshop">
@@ -90,24 +63,6 @@
     </div>
 </div>
 </div>
-
-<!-- this is a draggable element. exist outside the "cover" class -->
-<div id="dragnewsstand">
-<div id="dragnewsstandheader">
-    <a onclick="newsstandToggle()" title="newsstand"><h3>newsstand</h3></a>
-    <div id="newsstand" class="linktree_content">
-        <div class="linktree_nav">
-            <div><img class="arrow hidden" src="images/arrow up.png" alt="arrow up image"></div>
-            <div><img class="arrow hidden" src="images/arrow down.png" alt="arrow down image"></div>
-        </div>
-        <div id="linktreelistnewsstand">
-            <a href="#"><p>item 1</p></a>
-        </div>
-    </div>
-</div>
-</div>
-
-
 
 <!-- this is a draggable element. exist outside the "cover" class -->
 <div id="dragarchives">
@@ -177,6 +132,18 @@
 </div>
 </div>
 
+<div class="window" id="a">
+    <div class="container">
+        <div class="pane scroll scroll-color-colors">
+                <a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a>
+                <img src="images/andre kertesz distortion 1 TS.jpg">
+                <p>here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+                <img src="images/andre kertesz distortion 1 TS.jpg">
+                <p>here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+        </div>
+    </div>
+</div>
+
 
 <!-- cover class is used to position the footer menu in place. -->
 <!-- it is slightly awkward here as it relies on two elements, one DIV and one H4, that are not being used. -->
@@ -194,6 +161,7 @@
     </div>
     <div>
         <li><a onclick="archivesToggle()" title="archives"><h2>archives</h2></a></li>
+        <li><a title="categories"><h2>categories</h2></a></li>
         <li><div href="#" title="randomizer"><h2>randomizer</h2></div></li>
         <li><div href="#" title="daily track"><h2>daily track</h2></div></li>
         <li><div href="#" title="meet the cast"><h2>meet the cast</h2></div></li>
