work done on OCT/17/2023

--- a/index.html
+++ b/index.html
@@ -15,14 +15,34 @@
     <a onclick="shopToggle()" title="shop"><h3>shop</h3></a>
     <div id="shop" class="linktree_content">
         <div class="linktree_nav">
-            <div><img class="arrow hidden" src="images/arrow up.png" alt="arrow up image"></div>
-            <div><img class="arrow hidden" src="images/arrow down.png" alt="arrow down image"></div>
+            <div ><img class="arrow" id="slideUpshop" src="images/arrow up.png" alt="arrow up image"></div>
+            <div ><img class="arrow" id="slideDownshop" src="images/arrow down.png" alt="arrow down image"></div>
         </div>
         <div id="linktreelistshop">
-            <a href="#"><p>item 1</p></a>
-            <a href="#"><p>item 2</p></a>
-            <a href="#"><p>item 3</p></a>
-            <a href="#"><p>item 4</p></a>
+            <a href="https://10corsocomo.com/en-us" target="_blank"><p>10 CORSO COMO</p></a>
+            <a href="https://247archives.online/" target="_blank"><p>247</p></a>
+            <a href="https://threeasfour.com/" target="_blank"><p>3 AS FOUR SHOP</p></a>
+            <a href="https://www.apc-us.com/" target="_blank"><p>A.P.C</p></a>
+            <a href="https://acrnm.com/" target="_blank"><p>ACRNM</p></a>
+            <a href="https://www.aimeleondore.com//" target="_blank"><p>AIMÉ LEON DORE</p></a>
+            <a href="https://antonioli.eu/en-us" target="_blank"><p>ANTONIOLI</p></a>
+            <a href="https://apoc-store.com/" target="_blank"><p>APOC</p></a>
+            <a href="https://store.apolisglobal.com/" target="_blank"><p>APOLIS</p></a>
+            <a href="https://www.assemblynewyork.com//" target="_blank"><p>ASSEMBLY NEW YORK</p></a>
+            <a href="https://www.audiogon.com/" target="_blank"><p>AUDIOGON</p></a>
+            <a href="http://basicchannel.com/" target="_blank"><p>BASIC CHANNEL</p></a>
+            <a href="https://www.brooksengland.com/" target="_blank"><p>BROOKS ENGLAND</p></a>
+            <a href="https://www.byredo.com/us_en/" target="_blank"><p>BYREDO</p></a>
+            <a href="https://www.dashwoodbooks.com/" target="_blank"><p>DASHWOOD BOOKS</p></a>
+            <a href="https://www.etudes-studio.com/en-us#store" target="_blank"><p>ÉTUDES STUDIO</p></a>
+            <a href="https://www.feitdirect.com/shop/" target="_blank"><p>FEIT</p></a>
+            <a href="https://www.fleetilya.com/" target="_blank"><p>FLEET ILYA</p></a>
+            <a href="https://www.gentlemonster.com/us/" target="_blank"><p>GENTLE MONSTER</p></a>
+            <a href="https://www.imperfectfoods.com/" target="_blank"><p>IMPERFECT FOODS</p></a>
+            <a href="https://www.jacquessoloviere.com/" target="_blank"><p>JACQUES SOLOVIERE</p></a>
+            <a href="https://www.jjjjound.com/" target="_blank"><p>JJJJOUND</p></a>
+            <a href="https://www.lelabofragrances.com/" target="_blank"><p>LE LABO</p></a>
+            <a href="https://maisonfabre.com/en/" target="_blank"><p>MAISON FABRE</p></a>
         </div>
     </div>    
 </div>
@@ -38,11 +58,10 @@
             <div><img class="arrow hidden" src="images/arrow down.png" alt="arrow down image"></div>
         </div>
         <div id="linktreelistlistenup">
-            <a href="#"><p>item 1</p></a>
-            <a href="#"><p>item 2</p></a>
-            <a href="#"><p>item 3</p></a>
-            <a href="#"><p>item 4</p></a>
-            <a href="#"><p>item 5</p></a>
+            <a href="https://daily.bandcamp.com/" target="_blank"><p>BANDCAMP DAILY</p></a>
+            <a href="https://everynoise.com//" target="_blank"><p>EVERY NOISE</p></a>
+            <a href="https://www.nts.live/" target="_blank"><p>NTS</p></a>
+            <a href="https://somafm.com/" target="_blank"><p>SOMA.FM</p></a>
         </div>
     </div>
 </div>
@@ -58,7 +77,8 @@
             <div><img class="arrow hidden" src="images/arrow down.png" alt="arrow down image"></div>
         </div>
         <div id="linktreelistreferences">
-            <a href="#"><p>item 1</p></a>
+            <a href="http://www.ceftandcompany.com/" target="_blank"><p>CEFT AND COMPANY</p></a>
+            <a href="https://www.typographicposters.com/" target="_blank"><p>TYPO/GRAPHIC POSTERS</p></a>
         </div>
     </div>
 </div>
@@ -67,72 +87,61 @@
 <!-- this is a draggable element. exist outside the "cover" class -->
 <div id="dragarchives">
 <div id="dragarchivesheader">
-    <div id="archives">
-        <div class="archives_outline">
-            <div class="archives_list scroll scroll-color-colors">
-           <a href="#"><p>october 2023</p></a>
-           <a href="#"><p>september 2023</p></a>
-           <a href="#"><p>august 2023</p></a>
-           <a href="#"><p>july 2023</p></a>
-           <a href="#"><p>june 2023</p></a>
-           <a href="#"><p>may 2023</p></a>
-           <a href="#"><p>april 2023</p></a>
-           <a href="#"><p>march 2023</p></a>
-           <a href="#"><p>february 2023</p></a>
-           <a href="#"><p>january 2022</p></a>
-           <a href="#"><p>december 2022</p></a>
-           <a href="#"><p>november 2022</p></a>
-           <a href="#"><p>october 2022</p></a>
-           <a href="#"><p>september 2022</p></a>
-           <a href="#"><p>august 2022</p></a>
-           <a href="#"><p>july 2022</p></a>
-           <a href="#"><p>june 2022</p></a>
-           <a href="#"><p>may 2022</p></a>
-           <a href="#"><p>april 2022</p></a>
-           <a href="#"><p>march 2022</p></a>
-           <a href="#"><p>february 2022</p></a>
-           <a href="#"><p>january 2022</p></a>
-           <a href="#"><p>december 2021</p></a>
-           <a href="#"><p>november 2021</p></a>
-           <a href="#"><p>october 2021</p></a>
-           <a href="#"><p>september 2021</p></a>
-           <a href="#"><p>august 2021</p></a>
-           <a href="#"><p>july 2021</p></a>
-           <a href="#"><p>june 2021</p></a>
-           <a href="#"><p>may 2021</p></a>
-           <a href="#"><p>april 2021</p></a>
-           <a href="#"><p>march 2021</p></a>
-           <a href="#"><p>february 2021</p></a>
-           <a href="#"><p>january 2021</p></a>
+    <div class="window" id="archives">
+        <div class="container">
+            <div class="pane scroll scroll-color-colors">
+                <a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a>
+                <img src="images/andre kertesz distortion 1 TS.jpg">
+                <p>here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+                <img src="images/andre kertesz distortion 1 TS.jpg">
+                <p>here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
+            </div>
+            <div class="pane scroll scroll-color-colors">
+                <a href="#"><p>october 2023</p></a>
+                <a href="#"><p>september 2023</p></a>
+                <a href="#"><p>august 2023</p></a>
+                <a href="#"><p>july 2023</p></a>
+                <a href="#"><p>june 2023</p></a>
+                <a href="#"><p>may 2023</p></a>
+                <a href="#"><p>april 2023</p></a>
+                <a href="#"><p>march 2023</p></a>
+                <a href="#"><p>february 2023</p></a>
+                <a href="#"><p>january 2022</p></a>
+                <a href="#"><p>december 2022</p></a>
+                <a href="#"><p>november 2022</p></a>
+                <a href="#"><p>october 2022</p></a>
+                <a href="#"><p>september 2022</p></a>
+                <a href="#"><p>august 2022</p></a>
+                <a href="#"><p>july 2022</p></a>
+                <a href="#"><p>june 2022</p></a>
+                <a href="#"><p>may 2022</p></a>
+                <a href="#"><p>april 2022</p></a>
+                <a href="#"><p>march 2022</p></a>
+                <a href="#"><p>february 2022</p></a>
+                <a href="#"><p>january 2022</p></a>
+                <a href="#"><p>december 2021</p></a>
+                <a href="#"><p>november 2021</p></a>
+                <a href="#"><p>october 2021</p></a>
+                <a href="#"><p>september 2021</p></a>
+                <a href="#"><p>august 2021</p></a>
+                <a href="#"><p>july 2021</p></a>
+                <a href="#"><p>june 2021</p></a>
+                <a href="#"><p>may 2021</p></a>
+                <a href="#"><p>april 2021</p></a>
+                <a href="#"><p>march 2021</p></a>
+                <a href="#"><p>february 2021</p></a>
+                <a href="#"><p>january 2021</p></a>
+            </div>
         </div>
-        <div class="archives_container scroll scroll-color-colors">
-            <div class="post_title"><a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a></div>
-            <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-            <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-            <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-            <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-        </div>
-        </div> 
     </div>
-</div>
-</div>
+    </div>
+    </div>
 
 <!-- this is a draggable element. exist outside the "cover" class -->
+
 <div id="dragpost">
 <div id="dragpostheader">
-<div id="post" class="post_outline">
-    <div class="post_container scroll scroll-color-colors">
-        <div class="post_title"><a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a></div>
-        <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-        <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-        <img class="post_img" src="images/andre kertesz distortion 1 TS.jpg">
-        <p class="post_content">here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
-    </div>
-</div>
-</div>
-</div>
-
-<div class="window" id="a">
+<div class="window" id="post">
     <div class="container">
         <div class="pane scroll scroll-color-colors">
                 <a href="#"><h1>HOW TO COME UP WITH A GOOD TITLE</h1></a>
@@ -141,7 +150,21 @@
                 <img src="images/andre kertesz distortion 1 TS.jpg">
                 <p>here is an example. here is an example. here is an example. here is an example. here is an example. here is an example. </p>
         </div>
+        <div class="pane scroll scroll-color-colors" id="categories">
+            
+            <a href="#"><p>category 1</p></a>
+            <a href="#"><p>category 2</p></a>
+            <a href="#"><p>category 3</p></a>
+            <a href="#"><p>category 4</p></a>
+            <a href="#"><p>category 5</p></a>
+            <a href="#"><p>category 6</p></a>
+            <a href="#"><p>category 7</p></a>
+            <a href="#"><p>category 8</p></a>
+
+        </div>
     </div>
+</div>
+</div>
 </div>
 
 
@@ -161,7 +184,7 @@
     </div>
     <div>
         <li><a onclick="archivesToggle()" title="archives"><h2>archives</h2></a></li>
-        <li><a title="categories"><h2>categories</h2></a></li>
+        <li><a onclick="categoriesToggle()" title="categories"><h2>categories</h2></a></li>
         <li><div href="#" title="randomizer"><h2>randomizer</h2></div></li>
         <li><div href="#" title="daily track"><h2>daily track</h2></div></li>
         <li><div href="#" title="meet the cast"><h2>meet the cast</h2></div></li>
@@ -175,14 +198,14 @@
 </div>
 
 <script>
-    const buttonRight = document.getElementById('slideDowncategories');
-    const buttonLeft = document.getElementById('slideUpcategories');
+    const buttonRight = document.getElementById('slideDownshop');
+    const buttonLeft = document.getElementById('slideUpshop');
 
     buttonRight.onclick = function () {
-      document.getElementById('linktreelistcategories').scrollBy(0, 30);
+      document.getElementById('linktreelistshop').scrollBy(0, 29);
     };
     buttonLeft.onclick = function () {
-      document.getElementById('linktreelistcategories').scrollBy(0, -30);
+      document.getElementById('linktreelistshop').scrollBy(0, -29);
     };
 </script>
 
