WORK DONE ON NOV/22/2023

--- a/landingpage.html
+++ b/landingpage.html
@@ -17,10 +17,10 @@
     </div>
 </div>
 
-<div id="landing">
+<a href="index.html" id="landing">
         <img src="images/andre kertesz distortion 1 TS.jpg" alt="">
-        <h3><a href="index.html">enter tomorrow started</a></h3>
-</div>
+        <h3>enter tomorrow started</h3>
+</a>
 
 </body>
 </html>
